refactor: addition of methods instead of events to facilitate testing + feat: addition of gamemodes

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
             <input type="text" id="usernameInput" placeholder="Votre pseudo">
             <select id="gameModeSelect">
                 <option value="strict">Strict (Unanimité)</option>
+                <option value="mean">Moyenne</option>
+                <option value="median">Médiane</option>
+                <option value="absmajority">Majorité absolue</option>
+                <option value="plurality">Majorité relative</option>
             </select>
             <input type="file" id="backlogInput">
             <button id="createRoomBtn">Créer la salle</button>
